--- a/project.html
+++ b/project.html
@@ -29,15 +29,5 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-      <p>
-        &copy; <span id="currentYear"></span> The Task Force. WORK IN PROGRESS
-        SITE NOT FINISHED YET
-      </p>
-    </footer>
-  </body>
-
-  <script>
-    document.getElementById("currentYear").innerHTML = new Date().getFullYear();
-  </script>
+    <my-footer></my-footer>
 </html>
