Use custom element for header

--- a/project.html
+++ b/project.html
@@ -15,16 +15,7 @@
 
   <body>
     <!-- Header -->
-    <header>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="projects.html">Projects</a>
-        <a href="blog.html">Blog</a>
-        <a href="#">Support us</a>
-        <a href="https://github.com/The-Task-Force">GitHub</a>
-      </nav>
-    </header>
+    <my-header></my-header>
 
     <!-- Project Details -->
     <section class="project-details">
