--- a/about.html
+++ b/about.html
@@ -31,9 +31,16 @@
     <!-- Header -->
     <my-header></my-header>
 
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">About</li>
+        </ol>
+      </nav>
+
     <!-- About Section -->
     <section class="about">
-      <h1>About Us</h1>
+      <h1>About us</h1>
       <div class="about-content container">
         <p>
           The Task Force is a team of highly skilled professionals dedicated to
@@ -42,7 +49,18 @@
           finance, and project management. (ChatGPT wrote this description, must
           replace later)
         </p>
-        <!-- Add more content about the team -->
+      </div>
+      <h2>Our mission</h2>
+      <div class="about-content container">
+        <p>
+          Write about our goals and mission here
+        </p>
+      </div>
+      <h2>The team</h2>
+      <div class="about-content container">
+        <p>
+          Write about the team, I may turn this into a carousel or slider
+        </p>
       </div>
     </section>
 
