--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,13 @@
     <!-- Header -->
     <my-header></my-header>
 
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Blog</li>
+        </ol>
+      </nav>
+
     <!-- Blog Section -->
     <section class="blog">
       <h1>Our Blog</h1>
