--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <!-- Header -->
     <my-header></my-header>
 
+    <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+    </ol>
+    </nav>
+
     <!-- Hero Section -->
     <section class="hero">
       <h1>The Task Force</h1>
