--- a/project.html
+++ b/project.html
@@ -17,6 +17,14 @@
     <!-- Header -->
     <my-header></my-header>
 
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="projects.html">Projects</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Project</li>
+    </ol>
+  </nav>
+
     <!-- Project Details -->
     <section class="project-details">
       <div class="project-content">
