--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,13 @@
     <!-- Header -->
     <my-header></my-header>
 
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Projects</li>
+        </ol>
+      </nav>
+
     <!-- Accomplishments Section -->
     <section class="accomplishments">
       <h1>Our Accomplishments</h1>
