Added 2 new sections on home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Task Force</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="site-data/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="site-data/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="site-data/favicon-32x32.png">
@@ -31,6 +32,29 @@
       </div>
     </section>
 
+    <!-- Security Insights Section -->
+    <section class="security-insights">
+      <h2>Security Insights</h2>
+      <div class="insight-container">
+        <!-- Insight boxes go here -->
+        <div class="insight-box">
+          <div class="icon"><i class="fas fa-eye"></i></div>
+          <h3>Identify</h3>
+          <p>Understanding the current security state of affairs through vulnerability assessment, and threat analysis.</p>
+        </div>
+        <div class="insight-box">
+          <div class="icon"><i class="fas fa-lock"></i></div>
+          <h3>Prepare</h3>
+          <p>Equipping yourself with knowledge of vulnerabilities, threats, and best practices to strengthen defenses.</p>
+        </div>
+        <div class="insight-box">
+          <div class="icon"><i class="fas fa-shield-alt"></i></div>
+          <h3>Defend</h3>
+          <p>Taking proactive measures to address vulnerabilities and safeguard against threats.</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Featured Blog Posts -->
     <section class="featured-posts">
       <h2>Featured Blog Posts</h2>
@@ -49,6 +73,31 @@
       </div>
     </section>
 
+    <!-- Contact Us Section -->
+    <section class="contact-us section-box">
+      <div class="contact-box">
+        <h2>Contact Us</h2>
+        <p>Get in touch with us via email, Telegram, or Twitter.</p>
+        <div class="contact-buttons">
+          <a href="mailto:your.email@example.com" class="contact-button">
+            <i class="fas fa-envelope"></i>
+            Email
+          </a>
+          <a href="https://t.me/your_telegram" class="contact-button">
+            <i class="fab fa-telegram"></i>
+            Telegram
+          </a>
+          <a href="https://twitter.com/your_twitter" class="contact-button">
+            <i class="fab fa-twitter"></i>
+            Twitter
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <my-footer></my-footer>
+
+  </body>
+
 </html>
