Added shadows to all sections

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Security Insights Section -->
     <section class="security-insights">
       <h2>Security Insights</h2>
+      <hr class="section-divider">
       <div class="insight-container">
         <!-- Insight boxes go here -->
         <div class="insight-box">
