--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
           <h3>Identify</h3>
           <p>
             Understanding the current security state of affairs through
-            vulnerability assessment, and threat analysis.
+            assessments and analysis.
           </p>
         </div>
         <div class="insight-box">
           <div class="icon"><i class="fas fa-lock"></i></div>
           <h3>Prepare</h3>
           <p>
-            Equipping yourself with knowledge of vulnerabilities, threats, and
+            Equipping you with knowledge of vulnerabilities, threats, and
             best practices to strengthen defenses.
           </p>
         </div>
